--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node scripts/seed-dummy-data.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -48,6 +49,7 @@
     "daisyui": "^4.10.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   }
 }
