--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "extends": ["next/core-web-vitals", "eslint:recommended"],
   "env": {
     "browser": true,
@@ -6,7 +11,7 @@
     "es6": true
   },
   "rules": {
-    // Your specific rules.
+    "react/react-in-jsx-scope": "off",
     "no-unused-vars": "warn"
   }
 }
