--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
